# yams

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/yams/: base64.hpp  compile_time_string.hpp  yams.hpp
include/yams/bits/: win.hpp
modules/: yams-config-version.cmake.in  yams-config.cmake.in
tests/: CMakeLists.txt  base64_tests.cpp  yams.cpp
